backend/gateway/kubernetes/ingress/app-ingress.yaml
#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: gateway-ing
##  annotations:
##    kubernetes.io/ingress.class: "ingress-class"
#spec:
#  rules:
#    - host: cdmsgateway.com
#      http:
#        paths:
#          - path: /
#            backend:
#              serviceName: gateway-svc
#              servicePort: 9090:30163
##              service:
##                name: gateway-svc
##                port:
##                  number: 9090:30163
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: dashboard-ingress
#  namespace: kubernetes-dashboard
#  annotations:
#    kubernetes.io/ingress.class: "nginx"
#spec:
#  rules:
#  - host: dashboard.com
#    http:
#      paths:
#      - path: /
#        pathType: Exact
#        backend:
#          service:
#            name: kubernetes-dashboard
#            port:
#              number: 80
#---
#apiVersion: networking.k8s.io/v1
#kind: IngressClass
#metadata:
#  name: ingress-class
#---
apiVersion: v1
kind: Namespace
metadata:
  mame: ingress-ns
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: ingress-ns
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cdmsgateway.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: gateway-svc
                port:
                  number: 9090
